; ModuleID = '/home/carl/AnghaBench/libuv/test/extr_test-tcp-close-reset.c_read_cb.c'
source_filename = "/home/carl/AnghaBench/libuv/test/extr_test-tcp-close-reset.c_read_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@tcp_accepted = common dso_local global i32 0, align 4
@read_size = common dso_local global i32 0, align 4
@client_close = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i64, i32*)* @read_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @read_cb(i32* %0, i64 %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i64 %1, i64* %5, align 8
  store i32* %2, i32** %6, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = icmp eq i32* %7, @tcp_accepted
  %9 = zext i1 %8 to i32
  %10 = call i32 @ASSERT(i32 %9)
  %11 = load i64, i64* %5, align 8
  %12 = icmp slt i64 %11, 0
  br i1 %12, label %13, label %16

13:                                               ; preds = %3
  %14 = load i32*, i32** %4, align 8
  %15 = call i32 @uv_close(i32* %14, i32* null)
  br label %30

16:                                               ; preds = %3
  %17 = load i64, i64* %5, align 8
  %18 = load i32, i32* @read_size, align 4
  %19 = sext i32 %18 to i64
  %20 = add nsw i64 %19, %17
  %21 = trunc i64 %20 to i32
  store i32 %21, i32* @read_size, align 4
  %22 = load i32, i32* @read_size, align 4
  %23 = icmp eq i32 %22, 16
  br i1 %23, label %24, label %29

24:                                               ; preds = %16
  %25 = load i64, i64* @client_close, align 8
  %26 = icmp eq i64 %25, 0
  br i1 %26, label %27, label %29

27:                                               ; preds = %24
  %28 = call i32 @do_close(i32* @tcp_accepted)
  br label %29

29:                                               ; preds = %27, %24, %16
  br label %30

30:                                               ; preds = %29, %13
  ret void
}

declare dso_local i32 @ASSERT(i32) #1

declare dso_local i32 @uv_close(i32*, i32*) #1

declare dso_local i32 @do_close(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
